--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,15 @@ services:
       dockerfile: /api/Dockerfile
     ports:
       - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      POSTGRES_USER: nexdefend
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: nexdefend_db
+      POSTGRES_HOST: db
+    networks:
+      - nexdefend-net
 
   ai:
     build:
@@ -13,11 +22,18 @@ services:
       dockerfile: /ai/Dockerfile
     ports:
       - "5000:5000"
+    networks:
+      - nexdefend-net
 
   frontend:
     build: /frontend/nexdefend-frontend
     ports:
       - "3000:3000"
+    depends_on:
+      - api
+      - ai
+    networks:
+      - nexdefend-net
 
   db:
     image: postgres
@@ -27,3 +43,13 @@ services:
       POSTGRES_DB: nexdefend_db
     ports:
       - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - nexdefend-net
+
+volumes:
+  db_data:
+
+networks:
+  nexdefend-net:
