--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.8"
 services:
   api:
     build:
-      context: ../backend/go/nexdefend-api
-      dockerfile: /api/Dockerfile
+      context: backend/go/nexdefend-api
+      dockerfile: docker/api/Dockerfile
     ports:
       - "8080:8080"
     depends_on:
@@ -18,15 +18,15 @@ services:
 
   ai:
     build:
-      context: ../backend/python/nexdefend-ai
-      dockerfile: /ai/Dockerfile
+      context: backend/python/nexdefend-ai
+      dockerfile: docker/ai/Dockerfile
     ports:
       - "5000:5000"
     networks:
       - nexdefend-net
 
   frontend:
-    build: /frontend/nexdefend-frontend
+    build: frontend/nexdefend-frontend
     ports:
       - "3000:3000"
     depends_on:
