--- a/nexdefend-api/Dockerfile
+++ b/nexdefend-api/Dockerfile
@@ -1,15 +1,10 @@
-# Use the official Golang image
-FROM golang:1.16-alpine
+FROM golang:1.23.2-alpine3.19@sha256:f6392ffebb028fed5ffe743ddb9716e38402c978779edd66474bb5d05f5e65e4 AS builder
 
-# Set the working directory inside the container
 WORKDIR /app
-
-# Copy only the necessary files for the build
-COPY nexdefend-api/go.mod nexdefend-api/go.sum ./
+COPY ./go.mod ./go.sum ./
 RUN go mod download
 
-# Copy the rest of the application files
-COPY nexdefend-api/ ./
+COPY ./ ./
 
 # Build the Go application
 RUN go build -o nexdefend-api .
