--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,7 @@ services:
 
   frontend:
     build:
-      context: nexdefend-fronted
-      dockerfile: nexdefend-frontend/Dockerfile
+      context: nexdefend-frontend
     ports:
       - "3000:3000"
     depends_on:
