--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_NAME=nexdefend_db
 DB_HOST=localhost
 DB_PORT=5432
 DB_SSLMODE=disable
+API_PREFIX=/api/v1
+PYTHON_API=https://nexdefend-1.onrender.com
