--- a/.env
+++ b/.env
@@ -5,4 +5,10 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_SSLMODE=disable
 API_PREFIX=/api/v1
-PYTHON_API=https://nexdefend-1.onrender.com
+PYTHON_API=http://localhost:5000
+
+# --- NEW KEYS ---
+# For signing USER JWTs. Use a long, random string.
+JWT_SECRET_KEY=my_super_secure_user_jwt_secret_key_123!@#
+# For service-to-service auth. Must match the key in nexdefend-ai/.env
+AI_SERVICE_TOKEN=my_secure_service_to_service_token_abc987
