--- a/nexdefend-ai/.env
+++ b/nexdefend-ai/.env
@@ -3,3 +3,9 @@ DB_USER=nexdefend
 DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
+
+# --- NEW KEYS ---
+# URL for the Go backend API
+GO_API_URL=http://localhost:8080/api/v1
+# For service-to-service auth. Must match the key in .env
+AI_SERVICE_TOKEN=my_secure_service_to_service_token_abc987
