--- a/nexdefend-ai/Dockerfile
+++ b/nexdefend-ai/Dockerfile
@@ -4,6 +4,13 @@ FROM python:3.11-slim
 # Set the working directory inside the container
 WORKDIR /app
 
+# --- NEW: Install nmap ---
+# Install system dependencies: nmap
+# We update, install, and then clean up apt lists to keep the image slim
+RUN apt-get update && \
+    apt-get install -y nmap && \
+    rm -rf /var/lib/apt/lists/*
+
 # Copy only the requirements.txt first to leverage Docker caching
 COPY ./requirements.txt ./
 
