--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,25 @@ services:
     depends_on:
       - db
     environment:
+      # Database
       DB_USER: nexdefend
       DB_PASSWORD: password
       DB_NAME: nexdefend_db
       DB_HOST: db
+      # Service Communication
       PYTHON_API: http://ai:5000
       CORS_ALLOWED_ORIGINS: http://localhost:3000,https://nexdefend.vercel.app
+      # Secrets (MUST change in production)
       JWT_SECRET_KEY: "default_user_secret_key_12345"
       AI_SERVICE_TOKEN: "default_secret_token"
+      # Features
       FIM_PATH: /etc # Path to monitor inside the container
     volumes:
       # Mount the sample log and the shared log volume
       - ./sample_eve.json:/var/log/suricata/eve.json
       - suricata_logs:/var/log/suricata
-      - /etc:/etc:ro # Mount /etc read-only for FIM
+      # Mount /etc read-only for FIM to scan
+      - /etc:/etc:ro 
     networks:
       - nexdefend-net
 
@@ -35,13 +40,15 @@ services:
     depends_on:
       - db
     environment:
+      # Database
       DB_USER: nexdefend
       DB_PASSWORD: password
       DB_NAME: nexdefend_db
       DB_HOST: db
       DB_PORT: 5432
-      CORS_ALLOWED_ORIGINS: http://localhost:3000,https://nexdefend.vercel.app
+      # Service Communication
       GO_API_URL: http://api:8080/api/v1
+      # Secrets (MUST match 'api' service)
       AI_SERVICE_TOKEN: "default_secret_token"
     networks:
       - nexdefend-net
@@ -100,7 +107,6 @@ services:
     networks:
       - nexdefend-net
   
-  # --- NEW SERVICE ---
   suricata:
     image: jasonish/suricata:latest
     # This command tells suricata to watch the 'eth0' interface
