--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,13 @@ services:
       - db_data:/var/lib/postgresql/data
     networks:
       - nexdefend-net
+    # --- ADD THIS BLOCK ---
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U nexdefend -d nexdefend_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    # --- END ADD ---
 
   prometheus:
     image: prom/prometheus:v2.47.2
