--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy # <-- UPDATED: Wait for healthcheck
     environment:
       # Database
       DB_USER: nexdefend
@@ -38,7 +39,8 @@ services:
     ports:
       - "5000:5000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy # <-- UPDATED: Wait for healthcheck
     environment:
       # Database
       DB_USER: nexdefend
@@ -58,7 +60,7 @@ services:
       context: nexdefend-frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:5173" # FIX: Mapped to container port 5173
+      - "3000:5173" # Mapped to container port 5173
     environment:
       REACT_APP_API_URL: http://api:8080/api/v1
       REACT_APP_AI_API_URL: http://ai:5000
@@ -80,13 +82,12 @@ services:
       - db_data:/var/lib/postgresql/data
     networks:
       - nexdefend-net
-    # --- ADD THIS BLOCK ---
+    # --- ADDED HEALTHCHECK ---
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U nexdefend -d nexdefend_db"]
       interval: 5s
       timeout: 5s
       retries: 5
-    # --- END ADD ---
 
   prometheus:
     image: prom/prometheus:v2.47.2
@@ -117,8 +118,6 @@ services:
 
   suricata:
     image: jasonish/suricata:latest
-    # This command tells suricata to watch the 'eth0' interface
-    # and log to the shared volume in eve.json format.
     command: -i eth0 -D -v --eve-log-output /var/log/suricata/eve.json
     cap_add:
       - NET_ADMIN
