--- a/nexdefend-agent/Dockerfile
+++ b/nexdefend-agent/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Golang image to create a build artifact.
-FROM golang:1.24.3 as builder
+FROM golang:1.24.3-alpine AS builder
 
 # Set the working directory inside the container
 WORKDIR /app
