Install nmap and create non-root user in Dockerfile
Added nmap installation and created a non-root user for better security.

--- a/nexdefend-ai/Dockerfile
+++ b/nexdefend-ai/Dockerfile
@@ -1,24 +1,23 @@
-# Use the official Python slim image
 FROM python:3.11-slim
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# --- NEW: Install nmap ---
-# Install system dependencies: nmap
-# We update, install, and then clean up apt lists to keep the image slim
+# Install nmap and clean up
 RUN apt-get update && \
     apt-get install -y nmap && \
     rm -rf /var/lib/apt/lists/*
 
-# Copy only the requirements.txt first to leverage Docker caching
-COPY ./requirements.txt ./
+# Create non-root user
+RUN useradd -m appuser
 
-# Install dependencies
+COPY ./requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application files
 COPY ./ ./
 
-# Command to run the application
+# Change ownership of the app directory
+RUN chown -R appuser:appuser /app
+
+USER appuser
+
 CMD ["./start.sh"]
